--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Website</title>
     <!-- Normalize CSS -->
-    <link rel="stylesheet" href="Assets/css/modern_normalize.css">
+    <link rel="stylesheet" href="Assets/css/modern_normalize.css" />
     <!--Google fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Acme|Audiowide|Bangers|Montserrat|Nunito+Sans" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Acme|Audiowide|Bangers|Montserrat|Nunito+Sans"
+      rel="stylesheet"
+    />
     <!-- bootstrap -->
     <link
       rel="stylesheet"
@@ -17,14 +23,19 @@
       crossorigin="anonymous"
     />
     <!-- Font icons -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
     <!-- my Styles -->
     <link rel="stylesheet" href="Assets/css/main.css" />
   </head>
 
   <body>
     <nav class="navbar navbar-dark">
-      <a class="navbar-brand" id="logo" href="#">Konstantinos<br>Tzavellas</a>
+      <a class="navbar-brand" id="logo" href="#">Konstantinos<br />Tzavellas</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -62,11 +73,18 @@
               <span class="letters">Hello!!</span>
             </span>
           </h1>
-          <p >
-            I am <span class="wrapper">Konstantinos</span>, a Junior Web developer based in Düsseldorf. Dedicated, ambitious with a knack for conceptualizing and delivering elegant, user-friendly solutions effectively and efficiently. 
+          <p>
+            I am <span class="wrapper">Konstantinos</span>, a Junior Web
+            developer based in Düsseldorf. Dedicated, ambitious with a knack for
+            conceptualizing and delivering elegant, user-friendly solutions
+            effectively and efficiently.
           </p>
-          <hr/>
-          <a href="Assets/Resume/Resume.pdf" class="my-header-btn btn btn-primary text-center" download>
+          <hr />
+          <a
+            href="Assets/Resume/Resume.pdf"
+            class="my-header-btn btn btn-primary text-center"
+            download
+          >
             Download CV
           </a>
         </div>
@@ -81,7 +99,11 @@
         <div class="first-section-right">
           <h2>About me</h2>
           <p>
-            With a passion for business, IT, technology and science, I have both the skill set and professional background necessary to dive deep into the programming world. As an upbeat, self-motivated team player with excellent communication, I envision an exciting future in the industry. Browse my site to see all that I have to offer.
+            With a passion for business, IT, technology and science, I have both
+            the skill set and professional background necessary to dive deep
+            into the programming world. As an upbeat, self-motivated team player
+            with excellent communication, I envision an exciting future in the
+            industry. Browse my site to see all that I have to offer.
           </p>
         </div>
       </section>
@@ -93,7 +115,8 @@
           </p>
         </section>
         <section id="projectSection">
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #1"
             data-toggle="modal"
@@ -101,7 +124,8 @@
             ><img src="Assets/img/image4.jpeg" alt=""
           /></a>
 
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #2"
             data-toggle="modal"
@@ -109,7 +133,8 @@
             ><img src="Assets/img/image2.jpeg" alt=""
           /></a>
 
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #3"
             data-toggle="modal"
@@ -117,7 +142,8 @@
             ><img src="Assets/img/image3.jpeg" alt=""
           /></a>
 
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #4"
             data-toggle="modal"
@@ -125,7 +151,8 @@
             ><img src="Assets/img/image2.jpeg" alt=""
           /></a>
 
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #5"
             data-toggle="modal"
@@ -133,7 +160,8 @@
             ><img src="Assets/img/image1.jpeg" alt=""
           /></a>
 
-          <a class="animated"
+          <a
+            class="animated"
             href="#"
             title="Project #6"
             data-toggle="modal"
@@ -388,57 +416,91 @@
           </div>
         </div>
       </section>
-      <section id = "contact">
+      <section id="contact">
         <div class="contactForm">
           <div>
-            <h1 class = "myContactTitle text-center">Contact me!</h1>
+            <h2 class="myContactTitle text-center">Contact me!</h2>
           </div>
-          <hr>
+          <hr />
           <div class="contactFormContent">
             <div>
-              <h5>Name:</h5>
+              <h5 class="label">Name:</h5>
               <p class="myData">Konstantinos Tzavellas</p>
             </div>
-            <hr>
+            <hr />
             <div>
-              <h5>E-mail:</h5>
+              <h5 class="label">E-mail:</h5>
               <p class="myData">k.tzavellas@hotmail.com</p>
             </div>
-            <hr>
+            <hr />
             <div>
-              <h5>Phone:</h5>
+              <h5 class="label">Phone:</h5>
               <p class="myData">+49 15216064113</p>
             </div>
-            <hr>
-            <a href="Assets/Resume/Resume.pdf" class="my-submit-btn btn btn-primary text-center" download>
+            <hr />
+            <a
+              href="Assets/Resume/Resume.pdf"
+              class="my-submit-btn btn btn-primary text-center"
+              download
+            >
               Download CV
             </a>
           </div>
         </div>
         <div class="contactForm">
           <div>
-            <h1 class = "myContactTitle text-center">Or ... Say hello!</h1>
+            <h2 class="myContactTitle text-center">Or ... Say hello!</h2>
           </div>
-          <hr>
+          <hr />
           <div class="contactFormContent">
-            <form id = "myForm" name="form" method="POST" action="https://formspree.io/k.tzavellas@hotmail.com" autocomplete="off">
+            <form
+              id="myForm"
+              name="form"
+              method="POST"
+              action="https://formspree.io/k.tzavellas@hotmail.com"
+              autocomplete="off"
+            >
               <div class="formGroup">
                 <label class="label" for="usr">Name:</label>
-                <input class="myData" id="myName" type="text" name="name" minlength="2" required>
+                <input
+                  class="myData"
+                  id="myName"
+                  type="text"
+                  name="name"
+                  minlength="2"
+                  required
+                />
               </div>
-              <hr>
+              <hr />
               <div class="formGroup">
                 <label class="label" for="e-mail">E-mail:</label>
-                <input class="myData" id="myEmail" type="email" name="email" required>
+                <input
+                  class="myData"
+                  id="myEmail"
+                  type="email"
+                  name="email"
+                  required
+                />
               </div>
-              <hr>
+              <hr />
               <div class="formGroup">
                 <label class="label" for="comment">Message:</label>
-                <textarea class="myData" id="textArea" type="text"  name="message" required></textarea>
+                <textarea
+                  class="myData"
+                  id="textArea"
+                  type="text"
+                  name="message"
+                  required
+                ></textarea>
               </div>
-              <hr>
+              <hr />
               <div>
-                <button class="my-submit-btn btn btn-primary text-center" type="submit">Send</button> 
+                <button
+                  class="my-submit-btn btn btn-primary text-center"
+                  type="submit"
+                >
+                  Send
+                </button>
               </div>
             </form>
           </div>
@@ -446,17 +508,40 @@
       </section>
       <section id="socialMedia">
         <ul>
-          <li><a href="https://www.facebook.com/KonstantinosTzavellasKT" title="Facebook Connection" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-          <li><a href="https://github.com/ktzavellas" title="Github Connection" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a href="https://www.linkedin.com/in/konstantinos-tzavellas-19695034/" title="Linkedin Connection" target="_blank"><i class="fab fa-linkedin-in"></i></a></li> 
+          <li>
+            <a
+              href="https://www.facebook.com/KonstantinosTzavellasKT"
+              title="Facebook Connection"
+              target="_blank"
+              ><i class="fab fa-facebook-f"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://github.com/ktzavellas"
+              title="Github Connection"
+              target="_blank"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/konstantinos-tzavellas-19695034/"
+              title="Linkedin Connection"
+              target="_blank"
+              ><i class="fab fa-linkedin-in"></i
+            ></a>
+          </li>
         </ul>
       </section>
-    </main> 
-    
+    </main>
+
     <footer class="my-footer">
       <div>
         <p>Copyright 2019</p>
-        <p class="love">Made with <i class="fas fa-heart"></i> by Konstantinos</p>
+        <p class="love">
+          Made with <i class="fas fa-heart"></i> by Konstantinos
+        </p>
       </div>
     </footer>
 
@@ -476,5 +561,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="Assets/js/main.js"></script>
   </body>
-
 </html>
