--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </p>
           <hr />
           <a
-            href="Assets/Resume/Resume.pdf"
+            href="Assets/Resume/Konstantinos_Tzavellas_Resume.pdf"
             class="my-header-btn btn btn-primary text-center"
             download
           >
