--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
             </div>
             <hr />
             <a
-              href="Assets/Resume/Resume.pdf"
+              href="Assets/Resume/Konstantinos_Tzavellas_Resume.pdf"
               class="my-submit-btn btn btn-primary text-center"
               download
             >
